--- a/NLI.ApiService/App.config
+++ b/NLI.ApiService/App.config
@@ -1,3 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <appSettings>
+    <add key="SearchUrl" value="http://primo.nli.org.il/PrimoWebServices/xservice/search/brief" />
+  </appSettings>
 </configuration>
