--- a/NLI.UTILS/NLI.UTILS.csproj
+++ b/NLI.UTILS/NLI.UTILS.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{09EFA42C-A39E-43FC-8DFE-E914211C7D9E}</ProjectGuid>
+    <ProjectGuid>{CA7BAB32-2D58-4954-8C6F-5368093EB0E7}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>NLI.ApiService</RootNamespace>
-    <AssemblyName>NLI.ApiService</AssemblyName>
+    <RootNamespace>NLI.UTILS</RootNamespace>
+    <AssemblyName>NLI.UTILS</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -31,8 +31,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -41,22 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="SearchService.cs" />
-    <Compile Include="BaseService.cs" />
+    <Compile Include="UriHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\NLI.Models\NLI.Models.csproj">
-      <Project>{9ae25cea-5e7d-4883-a650-b95e7c76fba6}</Project>
-      <Name>NLI.Models</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\NLI.UTILS\NLI.UTILS.csproj">
-      <Project>{ca7bab32-2d58-4954-8c6f-5368093eb0e7}</Project>
-      <Name>NLI.UTILS</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
