--- a/NLI/NLI.UI.csproj
+++ b/NLI/NLI.UI.csproj
@@ -261,6 +261,7 @@
     <Content Include="Components\TimeLine\Components\TimeLineItem\TimeLineItem.scss" />
     <Content Include="Api\decades.json" />
     <Content Include="Components\TimeLine\Components\TimeLineList\TimeLineList.scss" />
+    <Content Include="Api\categories.json" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
