--- a/NLI/NLI.UI.csproj
+++ b/NLI/NLI.UI.csproj
@@ -204,6 +204,7 @@
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\BaseService.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -219,6 +220,9 @@
     <Content Include="Assets\Js\throttle.js" />
     <Content Include="Assets\Js\useful.js" />
     <Content Include="Components\Abstracts\Component\Component.js" />
+    <Content Include="Components\Categories\Categories.view.js" />
+    <Content Include="Components\Categories\Components\CategoryItem\CategoryItem.view.js" />
+    <Content Include="Components\Categories\Components\CategoryList\CategoryList.view.js" />
     <Content Include="Components\Footer\Footer.view.js" />
     <Content Include="Components\Header\Components\NavList\NavList.view.js" />
     <Content Include="Components\Header\Header.view.js" />
@@ -262,6 +266,9 @@
     <Content Include="Api\decades.json" />
     <Content Include="Components\TimeLine\Components\TimeLineList\TimeLineList.scss" />
     <Content Include="Api\categories.json" />
+    <Content Include="Components\Categories\Categories.scss" />
+    <Content Include="Components\Categories\Components\CategoryList\CategoryList.scss" />
+    <Content Include="Components\Categories\Components\CategoryItem\CategoryItem.scss" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -311,6 +318,8 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Content\fonts\" />
+    <Folder Include="Content\images\" />
     <Folder Include="Views\Action\" />
   </ItemGroup>
   <ItemGroup>
