--- a/NLI/NLI.UI.csproj
+++ b/NLI/NLI.UI.csproj
@@ -291,6 +291,8 @@
     <Content Include="Components\Tags\Components\TagList\TagList.scss" />
     <Content Include="Components\Tags\Components\PosterItem\PosterItem.scss" />
     <Content Include="Components\Tags\Components\PosterList\PosterList.scss" />
+    <Content Include="Components\PosterDetails\PosterDetails.view.js" />
+    <None Include="Components\PosterDetails\PosterDetails.scss" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
